--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,5 @@
-name: CI
+name: python app build and test
+
 
 on:
   push:
@@ -31,12 +32,19 @@ jobs:
       run: |
         pytest tests/test_routes.py
 
-    - name: Build Docker image
-      run: |
-        docker build -t my-website . 
+        - name: docker login
+        uses: docker/login-action@v3
+        with:
+          username: ${{ vars.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      
+        - name: Set up Docker Buildx
+          uses: docker/setup-buildx-action@v3
 
-    - name: Push Docker image
-      run: |
-        echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-        docker tag my-website my-docker-repo/my-website:latest
-        docker push my-docker-repo/my-website:latest
+        - name: build docker image
+          uses: docker/build-push-action@v4
+          with:
+            context: .
+            file: ./Dockerfile
+            push: true
+            tags:  ${{ vars.DOCKERHUB_USERNAME }}/dotnet:latest  
