--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,4 +47,4 @@ jobs:
         context: .
         file: ./Dockerfile
         push: true
-        tags:  ${{ vars.DOCKERHUB_USERNAME }}/dotnet:latest
+        tags:  ${{ vars.DOCKERHUB_USERNAME }}/pythonwebapp:latest
