--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
     
     - name: Cache Python dependencies
       uses: actions/cache@v3
@@ -24,14 +26,16 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-pip-
 
-    - name: sonarcloud
+    - name: SonarCloud Scan
       uses: sonarsource/sonarcloud-github-action@v1.0.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       with:
-        sonarcloud-token: ${{ secrets.SONAR_TOKEN }}
-        projectKey: ${ vars.SONAR_PROJECT_KEY }
-        projectName: '${{ github.event.repository.name }}'
-        organization: '${{ vars.SONAR_ORG }}'
-        sonarcloud-url: 'https://sonarcloud.io'
+        sonarCloudHost: ${{ secrets.SONAR_HOST_URL }}
+        projectKey: ${{ secrets.SONAR_PROJECT_KEY }}
+        projectName: ${{ github.event.repository.name }}
+        organization: ${{ secrets.SONAR_ORGANIZATION }}
 
     - name: Set up Python
       uses: actions/setup-python@v2
