--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,29 +27,35 @@ jobs:
           ${{ runner.os }}-pip-
 
     - name: SonarCloud Scan
-      uses: sonarsource/sonarcloud-github-action@v1.0.0
+      uses: sonarsource/sonarcloud-github-action@v1.9
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        SONAR_HOST_URL: https://sonarcloud.io
       with:
-        sonarCloudHost: ${{ secrets.SONAR_HOST_URL }}
-        projectKey: ${{ secrets.SONAR_PROJECT_KEY }}
-        projectName: ${{ github.event.repository.name }}
-        organization: ${{ secrets.SONAR_ORGANIZATION }}
+        args: >
+          -Dsonar.organization=${{ secrets.SONAR_ORGANIZATION }}
+          -Dsonar.projectKey=${{ secrets.SONAR_PROJECT_KEY }}
+          -Dsonar.projectName=${{ github.event.repository.name }}
+          -Dsonar.python.version=3.8
+          -Dsonar.sources=app
+          -Dsonar.tests=tests
+          -Dsonar.python.coverage.reportPaths=coverage.xml
 
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
-        python-version: '3.8'
+        python-version: '3.11'
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Run tests
+    - name: Run tests with coverage
       run: |
-        pytest tests/test_routes.py
+        pip install pytest pytest-cov
+        pytest tests/test_routes.py --cov=app --cov-report=xml
 
     - name: docker login
       uses: docker/login-action@v3
