--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,14 +26,14 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-pip-
 
-    - name: Set up JDK 17
+    - name: Set up JDK 21
       uses: actions/setup-java@v3
       with:
-        java-version: '17'
+        java-version: '21'
         distribution: 'temurin'
 
     - name: SonarCloud Scan
-      uses: sonarsource/sonarcloud-github-action@v1.9
+      uses: SonarSource/sonarcloud-github-action@master
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -46,7 +46,6 @@ jobs:
           -Dsonar.python.version=3.11
           -Dsonar.sources=app
           -Dsonar.tests=tests
-          -Dsonar.python.coverage.reportPaths=coverage.xml
           -Dsonar.python.coverage.reportPaths=coverage.xml
 
     - name: Set up Python
